# shadowshuttle-deepin

./: .gitignore  CMakeLists.txt  README.md  build.sh  shadowshuttle-deepin.desktop
debian/: changelog  control  copyright  debhelper-build-stamp  files
flatpak/: Makefile  build_shadowsocks-client.sh  cn.net.pikachu.shadowsocks-client.json
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ProxyManager.cpp  ProxyManager.h  Settings.cpp  ShareDialog.cpp  ShareDialog.h  Toolbar.cpp  Toolbar.h  conanfile.txt  main.cpp
src/common/: BaseResult.cpp  BaseResult.h  constant.h  utils.cpp  utils.h
src/controller/: ShadowsocksController.cpp  ShadowsocksController.h
src/controller/service/: GfwListUpdater.cpp  GfwListUpdater.h  PacServer.cpp  PacServer.h
src/controller/system/: AutoStartup.cpp  AutoStartup.h  SystemProxy.cpp  SystemProxy.h
src/model/: Configuration.cpp  Configuration.h  ServerConfig.cpp  ServerConfig.h
src/proxy/: Socks5Proxy.cpp  Socks5Proxy.h
src/resources/: ss.qrc
src/translations/: shadowshuttle-deepin.en.ts  shadowshuttle-deepin.zh_CN.ts  shadowshuttle-deepin_en.ts  shadowshuttle-deepin_zh_CN.ts  shadowsocks-deepin.en.ts  shadowsocks-deepin.zh_CN.ts
src/ui/: ConfigDialog.ui  MainWindow.ui  PACUrlDialog.ui  ProxyDialog.ui
src/widgets/: ConfigDialog.cpp  ConfigDialog.h  ContextMenuManager.cpp  ContextMenuManager.h  MainWindow.cpp  MainWindow.h  PACUrlDialog.cpp  PACUrlDialog.h  QRCodeCapturer.cpp  QRCodeCapturer.h  QRWidget.h  ShareDialog.cpp  ShareDialog.h  SingleListView.cpp  SingleListView.h  SystemTrayManager.cpp  SystemTrayManager.h
